# mstg

./: README.markdown  Setup.hs  TODO.markdown  mstg.cabal
lua/: primops.lua  rts.lua
src/: Main.hs
src/Language/Lua/: Build.hs
src/Language/Stg/: AST.hs
src/Language/Stg/Generate/: Lua.hs
src/Language/Stg/Parser/: Simple.hs
src/Language/Stg/PrettyPrinter/: Naive.hs
stg/: blackhole.stg  casecase.stg  error.stg  fact.stg  high.stg  indirection_test.stg  lazylist.stg  list.stg  num.stg  pap.stg  update.stg
