name:                mstg
version:             0.0.2.0
license:             MIT
author:              KblCb
maintainer:          ndtimofeev@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  ghc-options:         -Wall
  exposed-modules:
    Language.Lua.Build,
    Language.Stg.AST,
    Language.Stg.Generate.Lua,
    Language.Stg.Parser.Simple,
    Language.Stg.PrettyPrinter.Naive
  default-extensions:
    GADTs,
    StandaloneDeriving,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    DeriveFoldable,
    MultiParamTypeClasses,
    FunctionalDependencies,
    DeriveFunctor,
    Rank2Types
  build-depends:
    base >=4.7 && <4.8,
    language-lua,
    hslua,
    parsec,
    mtl,
    cpphs,
    syb
  hs-source-dirs:      src
  default-language:    Haskell2010

executable mstgc
  ghc-options:         -Wall
  main-is:             Main.hs 
  default-extensions:
    GADTs,
    StandaloneDeriving,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    DeriveFoldable,
    MultiParamTypeClasses,
    FunctionalDependencies,
    DeriveFunctor,
    Rank2Types
  build-depends:
    base >=4.7 && <4.8,
    language-lua,
    hslua,
    parsec,
    mtl,
    mstg,
    syb,
    cpphs
  hs-source-dirs:      src
  default-language:    Haskell2010
